# mdWorX

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.2.md
docs/: dev-setup.md  palette-contrast-audit.md  palette-previews.html  palettes.md  render_palette_cards.py
plugin/: CMakeLists.txt  build.ps1  install.vsconfig
plugin/src/: main.cpp  plugin.def  plugin.rc
release-bundle/mdWorX_v0.1.0/: README.txt
release-bundle/mdWorX_v0.1.0/mdWorX_assets/: index.html  manifest.json  settings-defaults.json  settings.css  settings.js  viewer.css  viewer.js
release-bundle/mdWorX_v0.1.1/: Install.cmd  README.txt
release-bundle/mdWorX_v0.1.1/mdWorX_assets/: index.html  manifest.json  settings-defaults.json  settings.css  settings.html  settings.js  viewer.css  viewer.js
release-bundle/mdWorX_v0.1.2/: README.txt  Uninstall.cmd
release-bundle/mdWorX_v0.1.2/mdWorX_assets/: index.html  manifest.json  settings-defaults.json  settings.css  settings.js  viewer.css  viewer.js
release-bundle/mdWorX_v0.2.0-beta/: Install.cmd  Uninstall.cmd
tests/: eol-mixed.md  sample.md  screenshot-demo.md  wrap-comparison.md
tests/encodings/: _generate_language_files.ps1  arabic.md  chinese-simplified.md  chinese-traditional.md  cp1252.md  devanagari.md  emoji.md  euc-kr.md  gbk.md  greek.md  hebrew.md  japanese.md  korean.md  mixed-bidi.md  shift-jis.md  thai.md  utf-16be.md  utf-16le.md  utf-8-bom.md  utf-8.md
web/: _demo-reel-capture.mjs  build.mjs  hero-gif.mjs  package-lock.json  package.json  palette-cascade.mjs  screenshot.mjs
web/src/: editor-livepreview.js  editor-toolbar.js  editor.js  index.html  settings-defaults.json  settings.css  settings.html  settings.js  viewer.css  viewer.js
web/src/lib/: code-highlight.js  code-themes.js  doc-annotations.js  image-alt.js  local-url.js  markdown-it-shared.js  toolbar-layout.js  toolbar-manifest.js
web/src/livepreview/: blank-line.js  blockquote.js  deflist.js  emphasis.js  fenced-code.js  footnote.js  formatting-marks.js  heading-spacer.js  heading.js  highlight.js  hr.js  image.js  link.js  list.js  table.js  task.js  util.js
